--- a/Security-Workshop.yaml
+++ b/Security-Workshop.yaml
@@ -8,7 +8,7 @@ Parameters:
     Type: String
     Default: GuardDuty-Example
     AllowedValues: 
-      - GuardDuty-Example
+      - Security-Workshop
     Description: Prefix for the resources that are created.
 
   KeyName:
