--- a/Security-Workshop.yaml
+++ b/Security-Workshop.yaml
@@ -1085,29 +1085,25 @@ Resources:
             echo secureserver1 > targets.txt
             echo secureserver2 > targets.txt
             chown -R ec2-user /home/ec2-user/
-            echo "*/5 * * * * python /home/ec2-user/SSH-Brute-Forcer/src/SSHBruteForce.py -i secureserver1 -U /home/ec2-user/SSH-Brute-Forcer/src/usernames.txt -P /home/ec2-user/SSH-Brute-Forcer/src/passwords.txt -a 10000 -t 5" >> /var/spool/cron/ec2-user
-            echo "*/5 * * * * python /home/ec2-user/SSH-Brute-Forcer/src/SSHBruteForce.py -i secureserver2 -U /home/ec2-user/SSH-Brute-Forcer/src/usernames.txt -P /home/ec2-user/SSH-Brute-Forcer/src/passwords.txt -a 10000 -t 5" >> /var/spool/cron/ec2-user
-            chown ec2-user:ec2-user /var/spool/cron/ec2-user
             yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
             yum -y install httpress
             cd /home/ec2-user/
             cat <<EOF>> /usr/local/bin/webstress.sh
             #!/bin/bash
             x="0"
-            while [ $x -lt 11 ]
+            while [ \$x -lt 11 ]
             do
-            echo $x
+            echo \$x
             httpress -n 10 -c 1  http://secureserver1/wordpress/index.php&
             httpress -n 10 -c 1  http://secureserver2/wordpress/index.php&
             sleep 15
-            x=$[$x+1]
+            x=\$[\$x+1]
             done
             EOF
             cat <<EOF>> /usr/local/bin/webnormal.sh
             #!/bin/bash
             while true
             do
-            echo $x
             httpress -n 2 -c 1  http://secureserver1/index.html&
             httpress -n 2 -c 1  http://secureserver2/index.html&
             sleep 15
@@ -1117,8 +1113,10 @@ Resources:
             chmod +x /usr/local/bin/webstress.sh
             echo "*/5 * * * * python /home/ec2-user/SSH-Brute-Forcer/src/SSHBruteForce.py -i secureserver1 -U /home/ec2-user/SSH-Brute-Forcer/src/usernames.txt -P /home/ec2-user/SSH-Brute-Forcer/src/passwords.txt -a 10000 -t 5" >> /var/spool/cron/ec2-user
             echo "*/5 * * * * python /home/ec2-user/SSH-Brute-Forcer/src/SSHBruteForce.py -i secureserver2 -U /home/ec2-user/SSH-Brute-Forcer/src/usernames.txt -P /home/ec2-user/SSH-Brute-Forcer/src/passwords.txt -a 10000 -t 5" >> /var/spool/cron/ec2-user
-            echo "*/10 * * * * /usr/local/bin/webstress.sh"
-            echo "@reboot /usr/local/bin/webnormal.sh"
+            echo "*/10 * * * * /usr/local/bin/webstress.sh">> /var/spool/cron/ec2-user
+            echo "@reboot /usr/local/bin/webnormal.sh">> /var/spool/cron/ec2-user
+            chown ec2-user:ec2-user /var/spool/cron/ec2-user
+
 
             
 
@@ -1267,13 +1265,26 @@ Resources:
         Id: ConfigTopicPolicy
         Version: '2012-10-17'
         Statement:
-        - Effect: Allow
-          Principal: "*"
-          # Principal:
-          #   Service: config.amazonaws.com
+        - Sid: Sid1
+          Effect: Allow
+          # Principal: "*"
+          Principal:
+            Service: 
+              - config.amazonaws.com #Allow Config
+              - events.amazonaws.com #Allow CloudWatch
           Action: SNS:Publish
-          Resource: '*'
-      Topics: [!Ref 'ConfigTopic']
+          Resource: !Ref 'ConfigTopic'
+        - Sid: Sid2
+          Effect: Allow
+          Principal:
+            AWS: '*' # Allow CloudWatch Alarms, ElastiCache Notifications, Elastic Beanstalk Notifications, Auto Scaling Notification
+          Action: 'sns:Publish'
+          Resource: !Ref ConfigTopic
+          Condition:
+            StringEquals:
+              'AWS:SourceOwner': !Ref 'AWS::AccountId'
+      Topics: 
+        - !Ref 'ConfigTopic'
 
 
 
